--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Asciinema with audio</title>
 </head>
 <body>
-    <header style="font-size: larger; font-weight: bold;">Asciinema with audio</header>
+    <header style="font-size: larger; font-weight: bold;"><a href="https://github.com/yababay/asciinema-with-audio.git">Asciinema with audio</a></header>
     <main>
         <section>
             <asciinema-player src="media/index.cast" cols="100" rows="26" id="asciinema" font-size=".8rem" preload="auto"></asciinema-player>
