--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header style="font-size: larger; font-weight: bold;"><a href="https://github.com/yababay/asciinema-with-audio.git">Asciinema with audio</a></header>
     <main>
         <section>
-            <asciinema-player src="media/index.cast" cols="100" rows="26" id="asciinema" font-size=".8rem" preload="auto"></asciinema-player>
+            <asciinema-player src="media/index.cast" cols="100" rows="26" id="asciinema" font-size=".8rem" preload="auto" speed="2"></asciinema-player>
         </section>
     </main>
     <footer style="font-size: smaller;">Натворил Михаил Беляков 2021.</footer>
