--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <main>
         <section></section>
     </main>
-    <footer style="font-size: smaller;">Натворил Михаил Беляков 2021.</footer>
+    <footer style="font-size: smaller;">&copy; Михаил Беляков 2021.</footer>
 </body>
 </html>
