--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
     <title>Asciinema with audio</title>
 </head>
 <body>
-    <header style="font-size: larger; font-weight: bold;"><a href="https://github.com/yababay/asciinema-with-audio.git">Asciinema with audio</a></header>
+    <header style="font-size: larger; font-weight: bold;">Java: консольные уроки</header>
     <main>
-        <section></section>
+        <section>
+            <figure>
+                <div id="player-holder"></div>
+                <aside>
+                    <p>Доступные скринкасты:</p>
+                    <ol>
+                        <li><a href="/">Hello, world!</a></li>
+                        <!-- li><a href="/">Hello, world!</a></li>
+                        <li><a href="/">Hello, world!</a></li>
+                        <li><a href="/">Hello, world!</a></li>
+                        <li><a href="/">Hello, world!</a></li>
+                        <li><a href="/">Hello, world!</a></li>
+                        <li><a href="/">Hello, world!</a></li -->
+                    </ol>
+                </aside>
+            </figure>
+        </section>
     </main>
     <footer style="font-size: smaller;">&copy; Михаил Беляков 2021.</footer>
 </body>
