--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <script src="js/asciinema-player.js" defer></script>
     <script src="js/index.js" defer type="module"></script>
-    <title>Asciinema with audio</title>
+    <title>Java: консольные уроки</title>
 </head>
 <body>
     <header style="font-size: larger; font-weight: bold;">Java: консольные уроки</header>
