--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <aside>
                     <p>Доступные скринкасты:</p>
                     <ol>
-                        <li><a href="/">Hello, world!</a></li>
+                        <li><a href="/"                   >Приглашение в мир консоли</a></li>
+                        <li><a href="/?001_hello-world"   >Пишем "Hello, world!"</a></li>
+                        <li><a href="/?002_first-creature">Игра "Консольная жизнь": первое творение</a></li>
                         <!-- li><a href="/">Hello, world!</a></li>
-                        <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
