--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <ol>
                         <li><a href="index.html"                   >Приглашение в мир консоли</a></li>
                         <li><a href="index.html?001_hello-world"   >Пишем "Hello, world!"</a></li>
-                        <li><a href="index.html?002_first-creature">Игра "Консольная жизнь": первое творение</a></li>
+                        <li><a href="index.html?002_first-creature">Игра "Консольная жизнь": сотворение мира</a></li>
+                        <li><a href="index.html?003_first-animal"  >Игра "Консольная жизнь": первый обитатель</a></li>
                         <!-- li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
