--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <li><a href="index.html?001_hello-world"   >Пишем "Hello, world!"</a></li>
                         <li><a href="index.html?002_first-creature">Игра "Консольная жизнь": сотворение мира</a></li>
                         <li><a href="index.html?003_first-animal"  >Игра "Консольная жизнь": первый обитатель</a></li>
+                        <li><a href="index.html?004_bobik-barbos"  >Игра "Консольная жизнь": кошки и собаки</a></li>
                         <!-- li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
