list-of-creatures

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <aside>
                     <p>Доступные скринкасты:</p>
                     <ol>
-                        <li><a href="index.html"                   >Приглашение в мир консоли</a></li>
-                        <li><a href="index.html?001_hello-world"   >Пишем "Hello, world!"</a></li>
-                        <li><a href="index.html?002_first-creature">Игра "Консольная жизнь": сотворение мира</a></li>
-                        <li><a href="index.html?003_first-animal"  >Игра "Консольная жизнь": первый обитатель</a></li>
-                        <li><a href="index.html?004_bobik-barbos"  >Игра "Консольная жизнь": кошки и собаки</a></li>
+                        <li><a href="."                       >Приглашение в мир консоли</a></li>
+                        <li><a href="./?001_hello-world"      >Пишем "Hello, world!"</a></li>
+                        <li><a href="./?002_first-creature"   >Игра "Консольная жизнь": сотворение мира</a></li>
+                        <li><a href="./?003_first-animal"     >Игра "Консольная жизнь": первый обитатель</a></li>
+                        <li><a href="./?004_bobik-barbos"     >Игра "Консольная жизнь": кошки и собаки</a></li>
+                        <li><a href="./?005_list-of-creatures">Игра "Консольная жизнь": список обитателей</a></li>
                         <!-- li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
                         <li><a href="/">Hello, world!</a></li>
