--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
                         <li><a href="./?003_first-animal"     >Игра "Консольная жизнь": первый обитатель</a></li>
                         <li><a href="./?004_bobik-barbos"     >Игра "Консольная жизнь": кошки и собаки</a></li>
                         <li><a href="./?005_list-of-creatures">Игра "Консольная жизнь": список обитателей</a></li>
-                        <!-- li><a href="/">Hello, world!</a></li>
-                        <li><a href="/">Hello, world!</a></li>
-                        <li><a href="/">Hello, world!</a></li>
-                        <li><a href="/">Hello, world!</a></li>
-                        <li><a href="/">Hello, world!</a></li -->
+                        <li><a href="./?006_fullness"         >Игра "Консольная жизнь": расход энергии</a></li>
                     </ol>
                 </aside>
             </figure>
